# project-r

./: .gitignore  .project  README.md  bag_on_person.launch  blobs.launch  depth_registered_segmentation.launch  plan 6.18.13  test.launch
backup branches/6.27.13/: readme
backup branches/6.27.13/src/tim/: CMakeLists.txt
backup branches/6.27.13/src/tim/src/: Analysis.cpp  Analysis.h  BlobDescriptor.h  MessageFetcher.cpp  MessageFetcher.h  driver.cpp  driver.cpp~
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/include/dhs/: bag.h  person.h
devel/lib/dhs/: depth  hsv  live  network_broadcaster  offline  offline_viewer  picker
devel/lib/pkgconfig/: dhs.pc  tim.pc
devel/lib/python2.7/dist-packages/dhs/msg/: __init__.py  _bag.py  _person.py
devel/lib/tim/: driver
devel/share/common-lisp/ros/dhs/msg/: _package.lisp  _package_bag.lisp  _package_person.lisp  bag.lisp  dhs-msg.asd  person.lisp
devel/share/dhs/cmake/: dhs-msg-extras.cmake  dhs-msg-paths.cmake  dhsConfig.cmake
devel/share/tim/cmake/: timConfig.cmake
src/DHS/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/DHS/include/: Analysis.cpp  Analysis.h  BlobDescriptor.cpp  BlobDescriptor.h  Broadcaster.h  InstanceGrabber.cpp  InstanceGrabber.h  MessageFetcher.cpp  MessageFetcher.h  OfflineAnalysis.cpp  OfflineAnalysis.h  Types.h  event.cpp  instancer_setup.cpp  utilities.cpp  utility.cpp  utility.h
src/DHS/msg/: person.msg
src/DHS/src/: depth.cpp  hsv.cpp  live.cpp  network_broadcaster.cpp  offline.cpp  offline_old.cpp  offline_viewer.cpp  picker.cpp  projection.cpp
src/dhs/: .project  CMakeLists.txt  CMakeLists.txt~  package.xml
src/dhs/executable/: BagInteraction.cpp  BagOnPersonProcessor.cpp  ShowBlobs.cpp  bag_interaction.cpp  blob_descriptor.cpp  blob_monitor.cpp  event_detector.cpp  image_filter.cpp  interface.cpp  segmentation.cpp
src/dhs/include/: Analysis.cpp  Analysis.h  BlobDescriptor.cpp  BlobDescriptor.h  BlobDescriptorExtended.h  Broadcaster.cpp  EventCodes.h  ImageFetcher.h  ImageSender.h  InstanceGrabber.cpp  InstanceGrabber.h  Kalman.cpp  Kalman.h  MessageFetcher.cpp  OfflineAnalysis.h  SynchronousImageFetcher.h  TcpClient.cpp  TcpClient.h  Types.h  Utility.h  common.h  event.cpp  instancer_setup.cpp  offline_event.cpp  utility.cpp  utility.h
src/dhs/include/dhs/: BlobDescriptor.h  BlobDescriptorDecorated.h  Interaction.h  Kalman.h  Periodic.h  PeriodicityTracker.h  ProcessorNode.h  SynchronousImageFetcher.h  Types.h  Utility.h
src/dhs/msg/: bag.msg  blob.msg  color.msg  contour.msg  event.msg
src/dhs/scripts/: talkerlistener.py
src/dhs/src/: BlobDescriptor.cpp  BlobDescriptorExtended.cpp  ImageFetcher.cpp  ImageSender.cpp  Interaction.cpp  Kalman.cpp  Periodic.cpp  ProcessorNode.cpp  SynchronousImageFetcher.cpp  Utility.cpp  depth.cpp  depthaticity.cpp  hinter.cpp  hsv.cpp  live.cpp  live.cpp~  network_broadcaster.cpp  new_offline.cpp  offline.cpp  picker.cpp  projection.cpp
src/dhs/test/: utest.cpp
src/dhs_launch/: CMakeLists.txt  package.xml
src/dhs_launch/launch/: bag_interaction.launch  bag_on_person.launch  blobs.launch  depth_registered_segmentation.launch  rgb_segmentation.launch
src/tim/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/tim/src/: Analysis.cpp  Analysis.h  BlobDescriptor.cpp  BlobDescriptor.h  Kalman.cpp  Kalman.h  MessageFetcher.cpp  MessageFetcher.h  driver.cpp  junk code.cpp  utilities.cpp
